Fix align

--- a/css/benefits.css
+++ b/css/benefits.css
@@ -2,8 +2,6 @@
     font-size: 30px;
     line-height: 39px;
     color: #000000;
-    margin-bottom: 15px;
-
 }
 .benefits{
     margin-top: 90px;
@@ -38,4 +36,5 @@
     gap: 40px;
     max-width: 670px;
     margin: 0 auto;
+    align-items: center;
 }
